--- a/src/main/resources/templates/res/add.html
+++ b/src/main/resources/templates/res/add.html
@@ -4,37 +4,92 @@
     <meta charset="UTF-8"/>
     <!--<script type="text/javascript" src="../js/jquery-1.11.3.min.js"></script>-->
     <title>Title</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="../../static/css/xadmin.css">
+    <link rel="stylesheet" href="../../static/css/layui.css">
+    <script type="text/javascript" src="../../static/js/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
 </head>
 <body>
-<div id="content">
-    <div th:include="role/inc :: head"></div>
-    <form role="form" th:method="post" th:object="${res}" id="addForm">
-        <table width="800" cellspacing="0" cellPadding="0">
-            <thead>
-            <tr>
-                <td colspan="2">添加资源功能</td>
-            </tr>
-            </thead>
-            <tr>
-                <td class="rightTd" width="200px">res名称:</td>
-                <td class="leftTd"><input type="text" th:field="${res.name}" size="30"/></td>
-            </tr>
-            <tr>
-                <td class="rightTd">res地址:</td>
-                <td class="leftTd">
-                    <input th:field="${res.url}" size="30"/>
-                </td>
-            </tr>
-            <tr>
-                <td class="rightTd">res权限字符串:</td>
-                <td class="leftTd">
-                    <input th:field="${res.permission}" size="30"/>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2" class="centerTd"><input type="submit" value="添加资源"/><input type="reset"/></td>
-            </tr>
-        </table>
+<div class="x-nav" style="margin-bottom: 30px">
+          <span class="layui-breadcrumb">
+            <a href="">XX</a>
+            <a href="">XX</a>
+            <a>
+              <cite>添加资源</cite></a>
+          </span>
+</div>
+<div id="content" class="layui-fluid">
+    <!--<div th:include="role/inc :: head"  class="layui-row"></div>-->
+    <form class="layui-form" role="form" th:method="post" th:object="${res}" id="addForm">
+        <!--<table width="800" cellspacing="0" cellPadding="0">-->
+            <!--&lt;!&ndash;<thead>&ndash;&gt;-->
+            <!--&lt;!&ndash;<tr>&ndash;&gt;-->
+                <!--&lt;!&ndash;<td colspan="2">添加资源功能</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;</tr>&ndash;&gt;-->
+            <!--&lt;!&ndash;</thead>&ndash;&gt;-->
+
+            <!--<tr class="layui-form-item">-->
+                <!--<label for="L_email" class="layui-form-label">-->
+                    <!--<span class="x-red">*</span>res名称:</label>-->
+                <!--<div class="layui-input-inline">-->
+                    <!--<input type="text" id="L_email" name="class_collage" required="" lay-verify="nickname"-->
+
+                           <!--autocomplete="off" class="layui-input"></div>-->
+            <!--</tr>-->
+            <!--&lt;!&ndash;<tr>&ndash;&gt;-->
+                <!--&lt;!&ndash;<td class="rightTd" width="200px">res名称:</td>&ndash;&gt;-->
+                <!--&lt;!&ndash;<td class="leftTd"><input type="text" th:field="${res.name}" size="30"/></td>&ndash;&gt;-->
+            <!--&lt;!&ndash;</tr>&ndash;&gt;-->
+            <!--<tr>-->
+                <!--<td class="rightTd">res地址:</td>-->
+                <!--<td class="leftTd">-->
+                    <!--<input th:field="${res.url}" size="30"/>-->
+                <!--</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<td class="rightTd">res权限字符串:</td>-->
+                <!--<td class="leftTd">-->
+                    <!--<input th:field="${res.permission}" size="30"/>-->
+                <!--</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<td colspan="2" class="centerTd"><input type="submit" value="添加资源"/><input type="reset"/></td>-->
+            <!--</tr>-->
+        <!--</table>-->
+
+        <div class="layui-form-item">
+            <label for="L_email" class="layui-form-label">
+                <span class="x-red">*</span>res名称:</label>
+            <div class="layui-input-inline">
+                <input type="text" id="L_email" name="class_collage" required=""
+                       th:field="${res.name}"
+                       lay-verify="nickname" autocomplete="off" class="layui-input"></div>
+        </div>
+        <div class="layui-form-item">
+            <label  class="layui-form-label">
+                <span class="x-red">*</span>res地址:</label>
+            <div class="layui-input-inline">
+                <input type="text" id="L_username" name="class_major"
+                       th:field="${res.permission}"
+                       required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
+        </div>
+        <div class="layui-form-item">
+            <label for="L_pass" class="layui-form-label">
+                <span class="x-red">*</span>res权限字符串:</label>
+            <div class="layui-input-inline">
+                <input type="text" id="L_pass"  name="class_grade"
+                       th:field="${res.permission}"
+                       required="" lay-verify="pass" autocomplete="off" class="layui-input"></div>
+        </div>
+
+        <div class="layui-btn-container" style="margin-left: 130px">
+            <input type="submit" class="layui-btn" value="添加资源"/>
+            <input type="reset" class="layui-btn"/>
+        </div>
     </form>
 </div>
 </body>
