--- a/src/main/resources/templates/role/list.html
+++ b/src/main/resources/templates/role/list.html
@@ -3,32 +3,108 @@
       xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head th:include="layout :: htmlhead" th:with="title='后台管理'">
     <meta charset="UTF-8"/>
-    <title>Title</title>
+    <title>角色表示</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="../../static/css/xadmin.css">
+    <link rel="stylesheet" href="../../static/css/layui.css">
+    <script src="../../static/js/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
+    <link rel="stylesheet" href="../../static/css/modules/layer/default/layer.css">
+
+    <style>
+        .layui-table th {
+            text-align: center;
+            font-weight: 900;
+        }
+        .layui-table td {
+            text-align: center;
+
+        }
+    </style>
 </head>
 <body>
-<div th:include="role/inc :: head"></div>
-<div id="content">
-    <table width="800" cellspacing="0" cellPadding="0" id="listTable" border="1">
-        <thead>
-        <tr>
-            <td>角色标识</td>
-            <td>角色名称</td>
-            <td>角色sn</td>
-            <td>操作</td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="role:${roles}">
-            <td th:text="${role.id}"></td>
-            <td th:text="${role.name }">
-            <td th:text="${role.sn }"></td>
-            <td>
-                <a th:href="@{|update/${role.id }|}" class="list_op">更新</a>
-                &nbsp;<a th:href="@{|listRes/${role.id }|}" class="list_op">查询管理资源</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<!--<div th:include="role/inc :: head"></div>-->
+<!--<div id="content">-->
+    <!--<table width="800" cellspacing="0" cellPadding="0" id="listTable" border="1">-->
+        <!--<thead>-->
+        <!--<tr>-->
+            <!--<td>角色标识</td>-->
+            <!--<td>角色名称</td>-->
+            <!--<td>角色sn</td>-->
+            <!--<td>操作</td>-->
+        <!--</tr>-->
+        <!--</thead>-->
+        <!--<tbody>-->
+        <!--<tr th:each="role:${roles}">-->
+            <!--<td th:text="${role.id}"></td>-->
+            <!--<td th:text="${role.name }">-->
+            <!--<td th:text="${role.sn }"></td>-->
+            <!--<td>-->
+                <!--<a th:href="@{|update/${role.id }|}" class="list_op">更新</a>-->
+                <!--&nbsp;<a th:href="@{|listRes/${role.id }|}" class="list_op">查询管理资源</a>-->
+            <!--</td>-->
+        <!--</tr>-->
+        <!--</tbody>-->
+    <!--</table>-->
+<!--</div>-->
+
+<div class="x-nav" style="margin-bottom: 30px">
+          <span class="layui-breadcrumb">
+            <a href="">角色管理</a>
+            <!--<a href="">XX</a>-->
+            <a>
+              <cite>角色表示</cite></a>
+          </span>
 </div>
+<div th:include="role/inc :: head"></div>
+<div class="layui-fluid">
+    <div class="layui-row layui-col-space15">
+        <div class="layui-col-md12">
+            <div class="layui-card">
+                <div class="layui-card-body">
+                    <div class="layui-inline">
+                        <a href="/admin/role/add" class="admin_link layui-btn">添加角色</a>
+                        <!--<button class="layui-btn" lay-filter="add" lay-submit>添加角色</button>-->
+                    </div>
+                    <table class="layui-table layui-form">
+                        <thead>
+                        <tr>
+                            <td>角色标识</td>
+                            <td>角色名称</td>
+                            <td>角色sn</td>
+                            <td>操作</td>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="role:${roles}">
+                            <td th:text="${role.id}"></td>
+                            <td th:text="${role.name }">
+                            <td th:text="${role.sn }"></td>
+                            <td>
+                                <a class="layui-btn list_op" th:href="@{|update/${role.id }|}" >更新</a>
+                                &nbsp;
+                                <a class="layui-btn list_op" th:href="@{|listRes/${role.id }|}">查询管理资源</a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!--<div class="layui-card-body ">-->
+                    <!--<div class="page">-->
+                        <!--<div>-->
+                            <!--<a class="prev">&lt;&lt;</a>-->
+                            <!--<a class="next">&gt;&gt;</a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            </div>
+        </div>
+    </div>
+</div>
+<script src="../../static/js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
