--- a/src/main/resources/templates/kaohe/progress_management.html
+++ b/src/main/resources/templates/kaohe/progress_management.html
@@ -80,7 +80,7 @@
                                 </div>
                                 <div class="layui-col-md2 ">
                                     <div class="layui-inline layui-show-xs-block">
-                                        <a  class="layui-btn"  lay-submit="" lay-filter="sreach">返回</a>
+                                        <a  class="layui-btn" href="#" onclick="javascript :history.back(-1)">返回</a>
                                         <a  class="layui-btn layui-btn-normal"  lay-submit="" lay-filter="sreach">导出成绩</a>
 
                                     </div>
