--- a/src/main/resources/templates/res/add.html
+++ b/src/main/resources/templates/res/add.html
@@ -6,12 +6,9 @@
     <title>Title</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
-    <link rel="stylesheet" href="../../static/css/layui.css">
-    <script type="text/javascript" src="../../static/js/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
+    <meta name="viewport"
+          content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
+    <link rel="stylesheet" th:href="@{/css/layui.css}" href="../../static/css/layui.css">
 </head>
 <body>
 <div class="x-nav" style="margin-bottom: 30px">
@@ -21,7 +18,6 @@
             <a>
               <cite>添加资源</cite></a>
           </span>
-
 </div>
 <div id="content" class="layui-fluid">
     <!--<div th:include="role/inc :: head"  class="layui-row"></div>-->
