--- a/src/main/resources/templates/res/inc.html
+++ b/src/main/resources/templates/res/inc.html
@@ -4,14 +4,15 @@
     <title>Document</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
-    <link rel="stylesheet" href="../../static/css/layui.css">
-    <script src="../../static/js/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
-    <link rel="stylesheet" href="../../static/css/modules/layer/default/layer.css">
-
+    <meta name="viewport"
+          content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
+    <link rel="stylesheet" href="../../static/css/font.css" th:href="@{/css/font.css}">
+    <link rel="stylesheet" href="../../static/css/xadmin.css" th:href="@{/css/xadmin.css}">
+    <link rel="stylesheet" href="../../static/css/layui.css" th:href="@{/css/layui.css}">
+    <script src="../../static/js/layui.js" charset="utf-8" th:src="@{/js/layui.js}"></script>
+    <script type="text/javascript" src="../../static/js/xadmin.js" th:src="@{/js/xadmin.js}"></script>
+    <link rel="stylesheet" href="../../static/css/modules/layer/default/layer.css"
+          th:href="@{/css/modules/layer/default/layer.css}">
 </head>
 <body>
 <!--<div th:fragment="head">-->
