--- a/src/main/resources/templates/res/inc.html
+++ b/src/main/resources/templates/res/inc.html
@@ -6,53 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
           content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
-    <link rel="stylesheet" href="../../static/css/font.css" th:href="@{/css/font.css}">
+    <link rel="stylesheet" th:href="@{/css/layui.css}" href="../../static/css/layui.css">
     <link rel="stylesheet" href="../../static/css/xadmin.css" th:href="@{/css/xadmin.css}">
-    <link rel="stylesheet" href="../../static/css/layui.css" th:href="@{/css/layui.css}">
-    <script src="../../static/js/layui.js" charset="utf-8" th:src="@{/js/layui.js}"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js" th:src="@{/js/xadmin.js}"></script>
-    <link rel="stylesheet" href="../../static/css/modules/layer/default/layer.css"
-          th:href="@{/css/modules/layer/default/layer.css}">
 </head>
 <body>
 <!--<div th:fragment="head">-->
-    <!--<div th:include="common :: common"></div>-->
-    <!--<span>-->
-<!--<a href="/admin/res/add" class="admin_link">添加资源</a>-->
-<!--<a href="/admin/res/list" class="admin_link">资源列表</a>-->
-<!--</span></div>-->
-
-
-<!--<div class="x-nav" style="margin-bottom: 30px">-->
-          <!--<span class="layui-breadcrumb">-->
-            <!--<a href="">XX</a>-->
-            <!--<a href="">XX</a>-->
-            <!--<a>-->
-              <!--<cite>资源XX</cite></a>-->
-          <!--</span>-->
+<!--    <div th:include="framebak :: common"></div>-->
 <!--</div>-->
+<!--<script>-->
+<!--    layui.use('element', function() {-->
+<!--        var element = layui.element; //导航的hover效果、二级菜单等功能，需要依赖element模块-->
 
-<!--<div class="layui-fluid"  th:fragment="head">-->
-    <!--<div th:include="common :: common"></div>-->
-    <!--<div class="layui-row layui-col-space15">-->
-        <!--<div class="layui-col-md12">-->
-            <!--<div class="layui-card">-->
-                <!--<div class="layui-card-body">-->
-                    <!--<div class="layui-inline">-->
-                        <!--<span>-->
-                            <!--<a class="admin_linklayui-btn" href="/admin/res/add" >添加资源</a>-->
-                            <!--&lt;!&ndash;<a class="admin_link layui-btn" href="/admin/res/list">资源列表</a>&ndash;&gt;-->
-                            <!--&lt;!&ndash;<a class="layui-btn" lay-filter="add" lay-submit>添加资源</a>&ndash;&gt;-->
-                            <!--&lt;!&ndash;<a class="layui-btn" lay-filter="list" lay-submit>资源列表</a>&ndash;&gt;-->
-                        <!--</span>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-<!--<script src="../../static/js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>-->
-<!--<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>-->
-
+<!--        //监听导航点击-->
+<!--        element.on('nav(demo)', function(elem) {-->
+<!--            console.log(elem)-->
+<!--            layer.msg(elem.text());-->
+<!--        });-->
+<!--    });-->
+<!--</script>-->
 </body>
 </html>
