--- a/src/main/resources/templates/kaohe/allModule.html
+++ b/src/main/resources/templates/kaohe/allModule.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>考核实验设置</title>
-	<link rel="stylesheet" type="text/css" href="../../static/css/layui.css" />
-	<link rel="stylesheet" type="text/css" href="../../static/css/page.css"/>
-	<link rel="stylesheet" type="text/css" href="../../static/css/bootstrap.min.css"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/layui.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/page.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
 	<style>
 		.text-overflow {
 			display:block;/*内联对象需加*/
@@ -36,33 +36,21 @@
 </head>
 <body>
 <div id="app" class="layui-container">
-<!--	<img src="../../static/images/LOGO2.png"> <br><br>-->
-<!--	<span class="layui-breadcrumb">-->
-<!--  			<a href="/">首页</a>-->
-<!--		&lt;!&ndash;<a href="/demo/">师资队伍</a>&ndash;&gt;-->
-<!--  			<a><cite>考核实验</cite></a>-->
-<!--			</span> <br><br><br>-->
 
 	<a href="/kaohemodel/checkModule"><button type="button" class="layui-btn layui-btn-primary" style="border-color: #174f37;color: #174f37;">考核模块</button></a>
 	<a href="/kaohemodel/allModule"><button type="button" class="layui-btn layui-btn-primary" style="border-color: #174f37;color: #ffffff;background: #009688">全部模块</button></a>
 
 	<select name="interest" lay-filter="aihao" onchange="window.open(this.options[this.selectedIndex].value,target='_self')" style="margin-top: 13px;">
-		<option>--请选择--</option>
+		<option th:value="|/kaohemodel/Module/-1|">--请选择--</option>
 		<div th:each="arrangeInfo:${arrangeInfoDTOs}" >
-			<option th:value="|/kaohemodel/Module/${arrangeInfo.getArrangeId()}/|"  th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" th:if="${arrangeInfo.getArrangeId() ne selected}">18信管01</option>
-			<option th:value="|/kaohemodel/Module/${arrangeInfo.getArrangeId()}/|"  th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" selected="selected" th:if="${arrangeInfo.getArrangeId() eq selected}">18信管01</option>
+			<option th:value="|/kaohemodel/Module/${arrangeInfo.getArrangeId()}|"  th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" th:if="${arrangeInfo.getArrangeId() ne selected}">18信管01</option>
+			<option th:value="|/kaohemodel/Module/${arrangeInfo.getArrangeId()}|"  th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" selected="selected" th:if="${arrangeInfo.getArrangeId() eq selected}">18信管01</option>
 		</div>
 	</select>
 
 	<div th:if="${Choose}">
 		<div class="layui-form">
 			<table class="layui-table">
-	<!--			<colgroup>-->
-	<!--				<col width="150">-->
-	<!--				<col width="150">-->
-	<!--				<col width="200">-->
-	<!--				<col>-->
-	<!--			</colgroup>-->
 				<thead>
 				<tr>
 					<th width="5%">ID</th>
@@ -81,15 +69,8 @@
 					<td th:text="${b.getPurpose()}">拓展创新</td>
 					<td th:text="${b.getClasshour()}">32</td>
 					<td >
-	<!--					<div th:each="c:${checkList}" >-->
-	<!--					<p th:text="${c}">是否在内</p>-->
-	<!--					</div>-->
-
-	<!--					th:if="${b.needKaohe eq 1}-->
-						<a th:href="@{|/kaohemodel/${b.getM_id()}/${selected}/moveIn|}" th:if="${!b.isNeedKaohe()}" ><button type="add"  @click="isTrue" class="layui-btn layui-btn-sm" >移入考核</button></a>
-
-
-
+<!--						<a th:href="@{|/kaohemodel/${b.getM_id()}/${selected}/moveIn|}" th:if="${!b.isNeedKaohe()}" ><button type="add"  @click="isTrue" class="layui-btn layui-btn-sm" >移入考核</button></a>-->
+						<a th:href="@{|/kaohemodel/${b.getM_id()}/${selected}/moveIn|}" th:if="${!b.isNeedKaohe()}" ><button type="add"  class="layui-btn layui-btn-sm" >移入考核</button></a>
 					</td>
 				</tr>
 
@@ -134,17 +115,11 @@
 		<p>请选择课程安排</p>
 	</div>
 </div>
-
-
-<!--<div style="text-align: center;">
-	<div id="pager" class="pager clearfix">
-	</div>
-</div>-->
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../static/js/vue.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../static/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../static/js/jquery.z-pager.js" type="text/javascript" charset="utf-8"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+<script th:src="@{/js/layui.all.js}" type="text/javascript" charset="utf-8"></script>
+<script th:src="@{/js/vue.js}" type="text/javascript" charset="utf-8"></script>
+<script th:src="@{/js/jquery.min.js}" type="text/javascript" charset="utf-8"></script>
+<script th:src="@{/js/jquery.z-pager.js}" type="text/javascript" charset="utf-8"></script>
 <script>
 	var app = new Vue({
 		el:"#app",
