--- a/src/main/resources/templates/kaohe/checkModule.html
+++ b/src/main/resources/templates/kaohe/checkModule.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>考核模块</title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/layui.css"/>
-    <link rel="stylesheet" type="text/css" href="../../static/css/page.css"/>
-    <link rel="stylesheet" type="text/css" href="../../static/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/layui.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/page.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
     <style>
         .text-overflow {
             display: block; /*内联对象需加*/
@@ -55,10 +55,10 @@
         </button>
     </a>
     <select name="interest" lay-filter="aihao" onchange="window.open(this.options[this.selectedIndex].value,target='_self')" style="margin-top: 13px;">
-        <option>--请选择--</option>
+        <option th:value="|/kaohemodel/checkModule/-1|">--请选择--</option>
         <div th:each="arrangeInfo:${arrangeInfoDTOs}" >
-            <option th:value="|/kaohemodel/checkModule/${arrangeInfo.getArrangeId()}/|"  th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" th:if="${arrangeInfo.getArrangeId() ne selected}">18信管01</option>
-            <option th:value="|/kaohemodel/checkModule/${arrangeInfo.getArrangeId()}/|"  th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" selected="selected" th:if="${arrangeInfo.getArrangeId() eq selected}">18信管01</option>
+            <option th:value="|/kaohemodel/checkModule/${arrangeInfo.getArrangeId()}|"  th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" th:if="${arrangeInfo.getArrangeId() ne selected}">18信管01</option>
+            <option th:value="|/kaohemodel/checkModule/${arrangeInfo.getArrangeId()}|"  th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" selected="selected" th:if="${arrangeInfo.getArrangeId() eq selected}">18信管01</option>
         </div>
     </select>
 
@@ -77,13 +77,6 @@
     <div th:if="${Choose}">
     <div class="layui-form">
         <table class="layui-table">
-            <!--					<colgroup>-->
-            <!--						<col width="150">-->
-            <!--						<col width="150">-->
-            <!--						<col width="200">-->
-            <!--						<col>-->
-            <!--					</colgroup>-->
-
             <thead>
             <tr>
                 <th width="5%">ID</th>
@@ -98,6 +91,7 @@
             </tr>
             </thead>
             <tbody>
+
             <tr align="center" th:each="kaoheModel:${kaoheModelPageInfo.content}">
                 <td th:text="${kaoheModel.id}">1</td>
                 <td th:text="${kaoheModel.Experiment_name}">期望</td>
@@ -108,7 +102,6 @@
                 <td th:text="${kaoheModel.m_scale}">32</td>
                 <td th:text="${kaoheModel.m_order}">50%</td>
 
-
                 <td>
                     <a type="update" class="layui-btn layui-btn-sm" th:href="@{|/kaohemodel/${kaoheModel.id}/update|}">修改</a>
                     <a type="delete" class="layui-btn layui-btn-sm app" @click="isTrue" style="background-color: red;"
@@ -116,7 +109,6 @@
 
                 </td>
             </tr>
-
             </tbody>
         </table>
 
@@ -166,15 +158,14 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../static/js/vue.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../static/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../static/js/jquery.z-pager.js" type="text/javascript" charset="utf-8"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+<script th:src="@{/js/layui.all.js}" type="text/javascript" charset="utf-8"></script>
+<script th:src="@{/js/vue.js}" type="text/javascript" charset="utf-8"></script>
+<script th:src="@{/js/jquery.min.js}" type="text/javascript" charset="utf-8"></script>
+<script th:src="@{/js/jquery.z-pager.js}" type="text/javascript" charset="utf-8"></script>
 <script>
     var app = new Vue({
         el: ".app",
-
         methods: {
             isTrue: function () {
                 confirm("确认要删除吗？");
@@ -185,7 +176,7 @@
                 $("#pager").zPager({
                     totalData: 11,
                     htmlBox: $('#wraper'),
-                    btnShow: true,
+                    btnShow: true,isTrue
                     ajaxSetData: false
                 });
 
