--- a/src/main/resources/templates/home_page/index.html
+++ b/src/main/resources/templates/home_page/index.html
@@ -237,6 +237,19 @@
 						</div>
 					</div>
 				</div>
+<!--				<div class="recommend">-->
+<!--					<div class="title-bar">-->
+<!--						<div class="title">推荐实验项目</div>-->
+<!--					</div>-->
+<!--					<div class="cl">-->
+<!--						<div class="recommend-item" th:each="expModel:${expModels}">-->
+<!--							<a th:href="@{|/expmodel/homeExpDispatcher/${expModel.getM_id()}|}">-->
+<!--								<img th:src="${expModel.getImageurl()}" />-->
+<!--								<p>基于旅游大数据虚拟仿真平台的推荐系统入门</p>-->
+<!--							</a>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
 			</div>
 		</div>
 		<div class="list-section">
