--- a/src/main/resources/templates/shouye/lunbo.html
+++ b/src/main/resources/templates/shouye/lunbo.html
@@ -15,7 +15,7 @@
 			margin-top: 30px;
 			border: 1px black solid;
 		}
-		#d1,#d2,#d3,#d4{
+		#d1,#d2,#d3,#d4,#d5,#d6{
 			margin: 10px;
 			padding: 10px;
 			border: 1px dimgrey solid;
@@ -59,11 +59,25 @@
             <div id="d4" class="layui-form-item">
                 <label class="layui-form-label">轮播图id4</label>
                 <div class="layui-input-block">
-                    <input type="text" name="id4" th:value="${id4}" required  lay-verify="required" placeholder="请输入M4" autocomplete="off" class="layui-input">
+                    <input type="text" name="id4" th:value="${id4}" required  lay-verify="required" placeholder="请输入id" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+
+            <div id="d5" class="layui-form-item">
+                <label class="layui-form-label">轮播图id5</label>
+                <div class="layui-input-block">
+                    <input type="text" name="id5" th:value="${id5}" required  lay-verify="required" placeholder="请输入id" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+
+            <div id="d6" class="layui-form-item">
+                <label class="layui-form-label">轮播图id6</label>
+                <div class="layui-input-block">
+                    <input type="text" name="id6" th:value="${id6}" required  lay-verify="required" placeholder="请输入id" autocomplete="off" class="layui-input">
                 </div>
             </div>
                       
-            <div id="d5" class="layui-btn-group">
+            <div id="d7" class="layui-btn-group">
 <!--                <button type="button" class="layui-btn layui-btn-primary layui-btn-sm">-->
 <!--                    <i class="layui-icon">&#xe654;</i>-->
 <!--                </button>-->
