--- a/src/main/resources/templates/kuangjia/frame.html
+++ b/src/main/resources/templates/kuangjia/frame.html
@@ -61,7 +61,7 @@
                                 <el-menu-item index="/shiyan/lastTestList">课程整体测试题管理</el-menu-item>
                                 <el-menu-item index="/testScoreManage/list">模块测试成绩管理</el-menu-item>
                                 <el-menu-item index="/reportScoreManage/list">模块报告成绩管理</el-menu-item>
-                                <el-menu-item index="">考核模块进度查询</el-menu-item>
+                                <el-menu-item index="/expmodel/kaoheProgress">考核模块进度查询</el-menu-item>
                                 <el-menu-item index="/lastTestScoreManage/list">课程整体测试成绩管理</el-menu-item>
                                 <el-menu-item index="/totalscore/list">学生总评成绩管理</el-menu-item>
                             </el-submenu>
